k8s/pts-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pts-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pts-ui
  template:
    metadata:
      labels:
        app: pts-ui
    spec:
      containers:
        - name: pts-ui
          image: localhost/pts-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pts-ui
spec:
  type: NodePort
  selector:
    app: pts-ui
  ports:
    - port: 80
      targetPort: 80
